fixed text alignment and translate

--- a/src/app/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
+++ b/src/app/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
@@ -122,6 +122,7 @@ $secondErrorColor : #b42626;
 
       .change {
         width: 191px;
+        display: flex;
       }
 
       input {
